Implement Backend Unit Tests