@@ -8,10 +8,6 @@ import javax.naming.ServiceUnavailableException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-
-import com.mlb.mlbportal.dto.mlbapi.*;
-import com.mlb.mlbportal.models.Stadium;
-import com.mlb.mlbportal.repositories.StadiumRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -28,16 +24,31 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.web.client.RestTemplate;
 
 import com.mlb.mlbportal.dto.match.MatchDTO;
+import com.mlb.mlbportal.dto.mlbapi.DateEntry;
+import com.mlb.mlbportal.dto.mlbapi.GameEntry;
+import com.mlb.mlbportal.dto.mlbapi.ScheduleResponse;
+import com.mlb.mlbportal.dto.mlbapi.Status;
+import com.mlb.mlbportal.dto.mlbapi.TeamData;
+import com.mlb.mlbportal.dto.mlbapi.TeamSide;
+import com.mlb.mlbportal.dto.mlbapi.Teams;
+import com.mlb.mlbportal.dto.mlbapi.Venue;
 import com.mlb.mlbportal.dto.team.TeamSummary;
 import com.mlb.mlbportal.handler.notFound.TeamNotFoundException;
 import com.mlb.mlbportal.models.Match;
+import com.mlb.mlbportal.models.Stadium;
 import com.mlb.mlbportal.models.Team;
 import com.mlb.mlbportal.models.enums.MatchStatus;
 import com.mlb.mlbportal.repositories.MatchRepository;
+import com.mlb.mlbportal.repositories.StadiumRepository;
 import com.mlb.mlbportal.repositories.TeamRepository;
 import com.mlb.mlbportal.services.MlbImportService;
 import com.mlb.mlbportal.services.TeamLookupService;
 import com.mlb.mlbportal.utils.BuildMocksFactory;
+import static com.mlb.mlbportal.utils.TestConstants.STADIUM1_NAME;
+import static com.mlb.mlbportal.utils.TestConstants.TEST_TEAM1_ABBREVIATION;
+import static com.mlb.mlbportal.utils.TestConstants.TEST_TEAM1_NAME;
+import static com.mlb.mlbportal.utils.TestConstants.TEST_TEAM2_ABBREVIATION;
+import static com.mlb.mlbportal.utils.TestConstants.TEST_TEAM2_NAME;
 
 @ExtendWith(MockitoExtension.class)
 class MlbImportServiceTest {
@@ -95,41 +106,33 @@ class MlbImportServiceTest {
 
         when(this.restTemplate.getForObject(anyString(), eq(ScheduleResponse.class))).thenReturn(scheduleResponse);
 
-        when(this.teamLookupService.getTeamSummary(1))
-                .thenReturn(
-                        new TeamSummary(this.mockTeams.get(0).getName(), this.mockTeams.get(0).getAbbreviation(), null,
-                                null));
-        when(this.teamLookupService.getTeamSummary(2))
-                .thenReturn(
-                        new TeamSummary(this.mockTeams.get(1).getName(), this.mockTeams.get(1).getAbbreviation(), null,
-                                null));
+        TeamSummary homeSummary = new TeamSummary(mockTeams.get(0).getName(), mockTeams.get(0).getAbbreviation(), null, null);
+        TeamSummary awaySummary = new TeamSummary(mockTeams.get(1).getName(), mockTeams.get(1).getAbbreviation(), null, null);
 
-        when(this.teamRepository.findByName(mockTeams.get(0).getName()))
-                .thenReturn(Optional.of(mockTeams.get(0)));
-        when(this.teamRepository.findByName(mockTeams.get(1).getName()))
-                .thenReturn(Optional.of(mockTeams.get(1)));
-
+        when(this.teamLookupService.getTeamSummary(1)).thenReturn(homeSummary);
+        when(this.teamLookupService.getTeamSummary(2)).thenReturn(awaySummary);
+        when(this.teamRepository.findByName(mockTeams.get(0).getName())).thenReturn(Optional.of(mockTeams.get(0)));
+        when(this.teamRepository.findByName(mockTeams.get(1).getName())).thenReturn(Optional.of(mockTeams.get(1)));
+        when(this.stadiumRepository.findByName(expectedStadiumName)).thenReturn(Optional.of(this.mockStadiums.getFirst()));
         when(this.stadiumRepository.findByNameOrThrow(expectedStadiumName)).thenReturn(this.mockStadiums.getFirst());
 
-        List<MatchDTO> matches = this.mlbImportService.getOfficialMatches(LocalDate.of(2026, 3, 1),
-                LocalDate.of(2026, 3, 1));
+        List<MatchDTO> matches = this.mlbImportService.getOfficialMatches(LocalDate.of(2026, 3, 1), LocalDate.of(2026, 3, 1));
 
         assertThat(matches).hasSize(1);
         assertThat(matches.getFirst().status()).isEqualTo(MatchStatus.FINISHED);
-
-        verify(this.matchRepository, times(1)).save(any());
+        verify(this.matchRepository, times(1)).save(any(Match.class));
     }
 
-    private ScheduleResponse buildResponse(String statusText, Integer homeScore, Integer awayScore) {
-        TeamData homeTeamData = new TeamData(1, "Home Team", "HT");
-        TeamData awayTeamData = new TeamData(2, "Away Team", "AT");
+    private ScheduleResponse buildResponse() {
+        TeamData homeTeamData = new TeamData(1, TEST_TEAM1_NAME, TEST_TEAM1_ABBREVIATION);
+        TeamData awayTeamData = new TeamData(2, TEST_TEAM2_NAME, TEST_TEAM2_ABBREVIATION);
 
-        TeamSide homeSide = new TeamSide(homeTeamData, homeScore);
-        TeamSide awaySide = new TeamSide(awayTeamData, awayScore);
+        TeamSide homeSide = new TeamSide(homeTeamData, 2);
+        TeamSide awaySide = new TeamSide(awayTeamData, 1);
 
         Teams teams = new Teams(homeSide, awaySide);
-        Status status = new Status(statusText);
-        Venue venue = new Venue(1, "Yankee Stadium");
+        Status status = new Status("Final");
+        Venue venue = new Venue(1, STADIUM1_NAME);
 
         GameEntry gameEntry = new GameEntry("2026-03-01T18:05:00", status, teams, venue);
         DateEntry dateEntry = new DateEntry(List.of(gameEntry));
@@ -137,27 +140,22 @@ class MlbImportServiceTest {
         return new ScheduleResponse(List.of(dateEntry));
     }
 
-    @SuppressWarnings("unchecked")
     @Test
-    @DisplayName("Should throw TeamNotFoundException when team is missing in repository")
+    @DisplayName("Should throw TeamNotFoundException when team is missing in repository during saving")
     void testGetOfficialMatchesTeamNotFoundThrowsException() {
-        ScheduleResponse scheduleResponse = this.buildResponse("Final", 2, 1);
-        when(this.restTemplate.getForObject(anyString(), eq(ScheduleResponse.class)))
-                .thenReturn(scheduleResponse);
+        ScheduleResponse scheduleResponse = this.buildResponse();
 
-        when(this.teamLookupService.getTeamSummary(1)).thenReturn(
-                new TeamSummary(this.mockTeams.get(0).getName(), this.mockTeams.get(0).getAbbreviation(), null, null));
-        when(this.teamLookupService.getTeamSummary(2)).thenReturn(
-                new TeamSummary(this.mockTeams.get(1).getName(), this.mockTeams.get(1).getAbbreviation(), null, null));
+        when(this.restTemplate.getForObject(anyString(), eq(ScheduleResponse.class))).thenReturn(scheduleResponse);
+        when(this.teamLookupService.getTeamSummary(1)).thenReturn(new TeamSummary(TEST_TEAM1_NAME, TEST_TEAM1_ABBREVIATION, null, null));
+        when(this.teamLookupService.getTeamSummary(2)).thenReturn(new TeamSummary(TEST_TEAM2_NAME, TEST_TEAM2_ABBREVIATION, null, null));
+        when(this.teamRepository.findByName(TEST_TEAM1_NAME)).thenReturn(Optional.of(this.mockTeams.get(0)));
+        when(this.teamRepository.findByName(TEST_TEAM2_NAME)).thenReturn(Optional.of(this.mockTeams.get(1)));
+        when(this.stadiumRepository.findByName(STADIUM1_NAME)).thenReturn(Optional.of(new Stadium()));
+        when(this.teamRepository.findByName(TEST_TEAM1_NAME)).thenReturn(Optional.of(this.mockTeams.getFirst())).thenReturn(Optional.empty());
 
-        when(this.teamRepository.findByName(this.mockTeams.get(0).getName()))
-                .thenReturn(Optional.of(this.mockTeams.get(0)), Optional.empty());
-        when(this.teamRepository.findByName(this.mockTeams.get(1).getName()))
-                .thenReturn(Optional.of(this.mockTeams.get(1)));
-
-        assertThatThrownBy(
-                () -> this.mlbImportService.getOfficialMatches(LocalDate.of(2026, 3, 1), LocalDate.of(2026, 3, 1)))
-                .isInstanceOf(TeamNotFoundException.class);
+        assertThatThrownBy(() -> this.mlbImportService.getOfficialMatches(LocalDate.of(2026, 3, 1), LocalDate.of(2026, 3, 1)))
+                .isInstanceOf(TeamNotFoundException.class)
+                .hasMessage("Team Not Found");
     }
 
     @Test
@@ -190,9 +188,9 @@ class MlbImportServiceTest {
         );
 
         assertThat(matches).hasSize(1);
-        assertThat(matches.get(0).homeTeam().name()).isEqualTo(homeTeam.getName());
-        assertThat(matches.get(0).awayTeam().name()).isEqualTo(awayTeam.getName());
-        assertThat(matches.get(0).status()).isEqualTo(MatchStatus.FINISHED);
+        assertThat(matches.getFirst().homeTeam().name()).isEqualTo(homeTeam.getName());
+        assertThat(matches.getFirst().awayTeam().name()).isEqualTo(awayTeam.getName());
+        assertThat(matches.getFirst().status()).isEqualTo(MatchStatus.FINISHED);
     }
 
     @Test
